# rogalik

./: .gitignore  Cargo.toml  README.md  publish_workspace.sh
crates/rogalik/: Cargo.toml  README.md
crates/rogalik/examples/: README.md  arkanoid.rs  hello_world.rs  lighting.rs
crates/rogalik/src/: android.rs  app.rs  engine.rs  input.rs  lib.rs  scenes.rs  time.rs  traits.rs  wasm.rs
crates/rogalik_assets/: Cargo.toml  build.rs
crates/rogalik_assets/src/: dev_file_store.rs  embedded_store.rs  lib.rs
crates/rogalik_audio/: Cargo.toml
crates/rogalik_audio/src/: assets.rs  lib.rs  source.rs
crates/rogalik_common/: Cargo.toml
crates/rogalik_common/src/: lib.rs  structs.rs  traits.rs
crates/rogalik_engine/: Cargo.toml
crates/rogalik_engine/src/: android.rs  app.rs  errors.rs  input.rs  lib.rs  scenes.rs  structs.rs  time.rs  traits.rs  wasm.rs
crates/rogalik_events/: Cargo.toml
crates/rogalik_events/src/: bus.rs  lib.rs
crates/rogalik_math/: Cargo.toml
crates/rogalik_math/src/: aabb.rs  lib.rs
crates/rogalik_math/src/vectors/: mod.rs  utils.rs  vector2.rs
crates/rogalik_persist/: Cargo.toml
crates/rogalik_persist/src/: file.rs  lib.rs  wasm.rs
crates/rogalik_storage/: Cargo.toml  README.md
crates/rogalik_storage/src/: component.rs  component_storage.rs  components.rs  entity.rs  errors.rs  lib.rs  query.rs  resource.rs  serialize.rs  world.rs  yaml.rs
crates/rogalik_wgpu/: Cargo.toml
crates/rogalik_wgpu/src/: camera.rs  lib.rs  structs.rs  utils.rs
crates/rogalik_wgpu/src/assets/: atlas.rs  bind_groups.rs  camera.rs  font.rs  material.rs  mod.rs  postprocess.rs  shader.rs  sprite_shader.wgsl  texture.rs
crates/rogalik_wgpu/src/assets/include/: lut.wgsl  sprite_lit.wgsl  sprite_pass_upscale.wgsl
crates/rogalik_wgpu/src/renderer2d/: atlas.rs  font.rs  globals.rs  mod.rs  pass.rs  postprocess_pass.rs  sprite_pass.rs  texture.rs  uniforms.rs
crates/rogalik_wgpu/src/sprites/: atlas.rs  mod.rs  pass.rs  sprite_shader.wgsl  texture.rs
crates/rogalik_wgpu/src/tools/: mod.rs  recorder.rs
rogalik_audio/: Cargo.toml
src/: lib.rs
