[package]
name = "rogalik"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
log = "0.4"
pollster = "0.3"
winit = { version = "0.28", features = [ "android-native-activity" ] }

[dependencies]
rogalik_engine = { path = "crates/rogalik_engine" }
rogalik_events = { path = "crates/rogalik_events" }
rogalik_math = { path = "crates/rogalik_math" }
rogalik_storage = { path = "crates/rogalik_storage" }
rogalik_wgpu = { path = "crates/rogalik_wgpu" }