[package]
name = "rogalik"
version = "0.2.1"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
log = "0.4"
pollster = "0.3"
serde = { version = "1.0", features = ["derive"] }
winit = { version = "0.29", features = [ "android-native-activity", "rwh_05" ] }

[features]
serialize = [
    "rogalik_math/serialize",
    "rogalik_storage/serialize",
    "rogalik_engine/serialize"
]

[dependencies]
rogalik_engine = { path = "crates/rogalik_engine" }
rogalik_events = { path = "crates/rogalik_events" }
rogalik_math = { path = "crates/rogalik_math" }
rogalik_persist = { path = "crates/rogalik_persist" }
rogalik_storage = { path = "crates/rogalik_storage" }
rogalik_wgpu = { path = "crates/rogalik_wgpu" }

