[package]
name = "rogalik"
version = "0.3.0"
edition = "2021"
description = "A simple framework for 2d pixel games"
authors = ["Maciej Główka <mg@maciejglowka.com>"]
license = "MIT"
repository = "https://github.com/maciekglowka/rogalik"
readme = "README.md"
publish = true
keywords = ["gamedev", "game", "wasm"]
categories = ["games", "game-engines", "game-development"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize = [
    "dep:serde",
    "rogalik_math/serialize",
 ]

[dependencies]
rogalik_assets = { path = "../rogalik_assets", version = "0.3.0" }
rogalik_audio = { path = "../rogalik_audio", version = "0.3.0" }
rogalik_common = { path = "../rogalik_common", version = "0.3.0" }
rogalik_math = { path = "../rogalik_math", version = "0.3.0" }
rogalik_persist = { path = "../rogalik_persist", version = "0.3.0" }
rogalik_wgpu = { path = "../rogalik_wgpu", version = "0.3.0" }

cfg-if = "1"
log = { workspace = true }
serde = { workspace = true, optional = true }
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlCollection", "Performance"
]}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"
ndk-context = "0.1"
