[package]
name = "rogalik_common"
version = "0.3.0"
edition = "2021"
description = "Common definitions for the Rogalik engine"
authors = ["Maciej Główka <mg@maciejglowka.com>"]
license = "MIT"
repository = "https://github.com/maciekglowka/rogalik"
publish = true
keywords = ["gamedev", "game", "wasm"]
categories = ["games", "game-engines", "game-development"]

[features]
serialize = ["dep:serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rogalik_math = { path = "../rogalik_math", version = "0.3.0" }

serde = { workspace = true, optional = true }
winit = { workspace = true }
