[package]
name = "rogalik_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogalik_math = { path = "../rogalik_math" }

cfg-if = "1"
env_logger = "0.10"
log = "0.4"
pollster = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlCollection"
]}