[package]
name = "rogalik_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogalik_math = { path = "../rogalik_math" }

cfg-if = "1"
log = { workspace = true }
pollster = { workspace = true }
winit = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlCollection"
]}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"