[package]
name = "rogalik_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize = ["dep:serde"]

[dependencies]
rogalik_assets = { path = "../rogalik_assets" }
rogalik_audio = { path = "../rogalik_audio" }
rogalik_common = { path = "../rogalik_common" }
rogalik_math = { path = "../rogalik_math" }
rogalik_wgpu = { path = "../rogalik_wgpu" }

cfg-if = "1"
log = { workspace = true }
serde = { workspace = true, optional = true }
winit = { workspace = true }

# [target.'cfg(not(target_os = "android"))'.dependencies]
# env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
# console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlCollection", "Performance"
]}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"
ndk-context = "0.1"
