[package]
name = "rogalik_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize = ["dep:serde"]

[dependencies]
num-traits = "0.2"

serde = { version = "1.0", features = ["derive"], optional = true }
