[package]
name = "rogalik_math"
version = "0.1.0"
edition = "2021"
description = "A basic math utils for the Rogalik engine"
authors = ["Maciej Główka <mg@maciejglowka.com>"]
license = "MIT"
repository = "https://github.com/maciekglowka/rogalik"
readme = "README.md"
publish = true
keywords = ["gamedev", "game", "wasm"]
categories = ["games", "game-engines", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize = ["dep:serde"]

[dependencies]
num-traits = "0.2"

serde = { workspace = true, optional = true }
