[package]
name = "rogalik_persist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Storage"] }