[package]
name = "rogalik_persist"
version = "0.3.0"
edition = "2021"
description = "A cross platform persistence backend for the Rogali engine"
authors = ["Maciej Główka <mg@maciejglowka.com>"]
license = "MIT"
repository = "https://github.com/maciekglowka/rogalik"
publish = true
keywords = ["gamedev", "game", "wasm"]
categories = ["games", "game-engines", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Storage"] }
