[package]
name = "rogalik_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
yaml = ["dep:serde", "dep:serde_yaml"]

[dependencies] 
rogalik_events = { path = "../rogalik_events" }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { varsion = "0.9", optional = true }