[package]
name = "rogalik_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogalik_assets = { path = "../rogalik_assets" }
rogalik_common = { path = "../rogalik_common" }
rogalik_math = { path = "../rogalik_math" }

bytemuck = { version = "1.12", features = ["derive"] }
log = { workspace = true }
pollster = "0.3"

wgpu = "23.0"
winit = { workspace = true }


[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "23.0", features = ["webgl"] }
wasm-bindgen-futures = "0.4"


