[package]
name = "rogalik_wgpu"
version = "0.3.0"
edition = "2021"
description = "A WGPU backend for the Rogalik engine"
authors = ["Maciej Główka <mg@maciejglowka.com>"]
license = "MIT"
repository = "https://github.com/maciekglowka/rogalik"
publish = true
keywords = ["gamedev", "game", "wasm"]
categories = ["games", "game-engines", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
video = []

[dependencies]
rogalik_assets = { path = "../rogalik_assets", version = "0.3.0" }
rogalik_common = { path = "../rogalik_common", version = "0.3.0" }
rogalik_math = { path = "../rogalik_math", version = "0.3.0" }

bytemuck = { version = "1.12", features = ["derive"] }
gif = "0.13" # TODO make optional?
log = { workspace = true }
pollster = "0.3"

wgpu = "23.0"
winit = { workspace = true }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "23.0", features = ["webgl"] }
wasm-bindgen-futures = "0.4"


